mirthWebApp/client/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirth-web
  namespace: pre-production
spec:
  type: ClusterIP
  selector:
    app: mirth-web
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
